# yukinator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
docs/: conf.py  index.rst  modules.rst  requirements.txt  submodules.rst  yuki.rst
tests/: test_objects.py  test_utils.py  test_yukinator.py
tests/resources/: drivers.json  examples.py  races.json  wrong_request.json
yukinator/: __init__.py  exceptions.py  objects.py  utils.py  yukinator.py
