[tool.poetry]
name = "yukinator"
version = "0.1.0"
description = "Unofficial Ergast API wrapper"
authors = ["brozen <szymon.mazurkievicz@gmail.com>"]
license = "MIT"
homepage = "https://github.com/BrozenSenpai/yukinator"
keywords = ["Ergast API"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^21.4.0"
requests-cache = "^0.9.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-mock = "^3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
