[tool.poetry]
name = "yukinator"
version = "0.1.2"
description = "Unofficial Ergast API wrapper"
authors = ["brozen <szymon.mazurkievicz@gmail.com>"]
license = "MIT"
homepage = "https://github.com/BrozenSenpai/yukinator"
documentation = "https://yukinator.readthedocs.io/en/latest/"
keywords = ["Ergast API"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^22.2.0"
requests-cache = "^0.9.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-mock = "^3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
